# ft_linear_regression

./: .gitignore  Cargo.toml
src/predict/: main.rs
src/training/: formulas.rs  main.rs
