[package]
name = "ft_linear_regression"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "training"
path = "src/training/main.rs"

[[bin]]
name = "predict"
path = "src/predict/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
